--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation "com.sothree.slidinguppanel:library:3.4.0"
+
 }
